fixed: header__list gap

--- a/blocks/header/__link/header__lang-link.css
+++ b/blocks/header/__link/header__lang-link.css
@@ -7,9 +7,7 @@
   color: #ffffff;
 }
 
-.header__lang-link:not(:last-child) {
-  margin-right: 18px;
-}
+
 
 .header__lang-link:hover {
   opacity: 70%;
